# kasa_carbon

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  kasa_carbon.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: test.yml
interfaces/: datastore_api.py
kasa_carbon/: kasa_carbon_main.py
kasa_carbon/interfaces/: carbon_api.py  datastore_api.py  monitor_api.py
kasa_carbon/modules/: database.py  device_factory.py  electricitymaps_api.py  energy_usage.py  file_storage.py  generic_monitor.py  kasa_monitor.py  omada_monitor.py
modules/: database.py  electricitymaps_api.py  energy_usage.py  file_storage.py  kasa_monitor.py
sql/: 01_init.sql  02_create_view_user.sh  init.sql
tests/: conftest.py  test_database.py  test_electricitymaps_api.py  test_file_storage.py  test_kasa_monitor.py  test_monitor.py  test_omada.py
visualization/: energy_usage.xlsx  power_and_co2_consumption.pbit
